Fix the disabled state.  It shouldn't have a grey stroke. Removed extra space at the bottom of the file.

--- a/src/components/Icon/SuccessIcon/SuccessIcon.less
+++ b/src/components/Icon/SuccessIcon/SuccessIcon.less
@@ -5,6 +5,7 @@
 	stroke: @featured-color-success;
 
 	&-background {
+		stroke: @featured-color-success;
 		fill: @featured-color-success;
 	}
 
@@ -17,4 +18,3 @@
 		stroke: @color-white;
 	}
 }
-
